welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: not found: value avence
avance();avance();avance();avance;gauche;avance;avance;droite;avance;avance;avance;avance;droite;avance;avance;gauche;avance;avance;avance;avance;gauche;avance;avance;avance;avance;gauche;avance;avance;droite;avance;avance;avance;avance;droite;avence;avance;avance;gauche;avance;avance;avance;gauche;
                                                                                                                                                                                                                                                    ^